--- a/config
+++ b/config
@@ -455,7 +455,7 @@ CONFIG_HOTPLUG_CPU=y
 # CONFIG_LEGACY_VSYSCALL_EMULATE is not set
 CONFIG_LEGACY_VSYSCALL_NONE=y
 CONFIG_CMDLINE_BOOL=y
-CONFIG_CMDLINE="root=PARTLABEL=Debiancyanide initrd=initramfs-linux-mainline.img module_blacklist=nouveau enable_psr=1 disable_power_well=0 acpi_rev_override=1 nmi_watchdog=0 fbcon=font:TER16x32"
+CONFIG_CMDLINE="root=PARTLABEL=Debiancyanide initrd=initramfs-linux-mainline.img module_blacklist=nouveau enable_psr=1 disable_power_well=0 acpi_rev_override=1 nmi_watchdog=0 fbcon=font:TER16x32 zswap.enabled=1 zswap.compressor=lz4 zswap.max_pool_percent=20 zswap.zpool=z3fold"
 # CONFIG_CMDLINE_OVERRIDE is not set
 CONFIG_MODIFY_LDT_SYSCALL=y
 CONFIG_HAVE_LIVEPATCH=y
@@ -2495,8 +2495,7 @@ CONFIG_AIC79XX_RESET_DELAY_MS=15000
 CONFIG_AIC79XX_DEBUG_ENABLE=y
 CONFIG_AIC79XX_DEBUG_MASK=0
 CONFIG_AIC79XX_REG_PRETTY_PRINT=y
-CONFIG_SCSI_AIC94XX=m
-CONFIG_AIC94XX_DEBUG=y
+# CONFIG_SCSI_AIC94XX is not set
 CONFIG_SCSI_MVSAS=m
 CONFIG_SCSI_MVSAS_DEBUG=y
 CONFIG_SCSI_MVSAS_TASKLET=y
@@ -2566,7 +2565,7 @@ CONFIG_SCSI_LPFC=m
 # CONFIG_SCSI_LPFC_DEBUG_FS is not set
 CONFIG_SCSI_DC395x=m
 CONFIG_SCSI_AM53C974=m
-CONFIG_SCSI_WD719X=m
+# CONFIG_SCSI_WD719X is not set
 CONFIG_SCSI_DEBUG=m
 CONFIG_SCSI_PMCRAID=m
 CONFIG_SCSI_PM8001=m
